# f28379d-drv8305-dual-comm

./: .buildinfo  .gitignore  LICENSE  README.rst  controller.html  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  readme_link.html  search.html  searchindex.js
.doctrees/: controller.doctree  environment.pickle  index.doctree  intro.doctree  readme_link.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/f28379d_drv8305_dual_comm/: controller.html
_modules/motor_control/: controller.html
_sources/: controller.rst.txt  index.rst.txt  intro.rst.txt
docs/source/: conf.py  controller.rst  index.rst
f28379d_drv8305_dual_comm/: __init__.py  controller.py  defs.py
f28379d_drv8305_dual_comm/examples/: basic_usage.py  read_data_cb.py  read_data_queue.py
f28379d_drv8305_dual_comm/funcs/: __init__.py
motor_control/: controller.py  defs.py
motor_control/funcs/: crc.py  serial_funcs.py
